--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,69 @@ body {
 }
 
 /*=============== SEARCH ===============*/
+.container{
+  height: 100vh;
+  margin-inline: 1.5rem;
+  display: grid;
+  place-items: center;
+}
 
+.search{
+  position: relative;
+  width: 76px;
+  height: 76px;
+  background-color: var(--white-color);
+  box-shadow: 0 4px 24px hsla(222, 68%, 125, .1);
+  border-radius: 4rem;
+  padding: 10px;
+  overflow: hidden;
+}
+
+.search__input{
+  /* background-color: antiquewhite; */
+  border: none;
+  outline: none;
+  width: calc(100% - 64px);
+  height: 100%;
+  border-radius: 4rem;
+  padding-left: 14px;
+  font-family: var(--body-font);
+  font-size: var(--small-font-size);
+  font-weight: 500;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1.5s;
+}
+
+.search__input:-webkit-autofill{
+  box-shadow: 0 0 0 100px var(--white-color) inset;
+}
+
+.search__button{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  width: 56px;
+  height: 56px;
+  background-color: var(--dark-color);
+  border-radius: 50%;
+  margin: auto;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+}
+
+.search__icon,
+.search__close{
+  color: var(--white-color);
+  font-size: 1.5rem;
+  position: absolute;
+}
+
+.search__close{
+  opacity: 0;
+}
 
 /* Search animated */
 
