--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,3 +128,8 @@ body {
 
 /*=============== BREAKPOINTS ===============*/
 /* For medium devices */
+@media screen and (min-width: 576px) {
+  .show-search{
+    width: 450px;
+  }
+}
